# air-gradient-rs

./: .gitignore  Cargo.toml  README.md  claude.md  flake.nix  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
core/tests/: driver_trait.rs  heartbeat_snapshots.rs
core/tests/snapshots/: heartbeat_snapshots__heartbeat_lines@00-boot.snap  heartbeat_snapshots__heartbeat_lines@01-one-hour.snap  heartbeat_snapshots__heartbeat_lines@02-u32-max.snap
docs/walkthrough/: 01-heartbeat.md  README.md
firmware/: Cargo.toml  diagram.json  wokwi.toml
firmware/.cargo/: config.toml
firmware/adapter/: Cargo.toml
firmware/adapter/src/: lib.rs
firmware/indoor/: Cargo.toml  wokwi.toml
firmware/indoor/.cargo/: config.toml
firmware/indoor/src/: main.rs
firmware/outdoor/: Cargo.toml  diagram.json  wokwi.toml
firmware/outdoor/.cargo/: config.toml
firmware/outdoor/src/: main.rs
firmware/src/: main.rs
