[workspace]
resolver = "2"
members = ["core"]

# `cargo test` / `cargo build` at the repo root operate on the host and must
# touch only the pure crate. `firmware` is built explicitly with its MCU target
# (`cargo build -p aq-firmware --target riscv32imc-unknown-none-elf`); keeping it
# out of the default set stops the host toolchain from trying to compile esp-hal.
default-members = ["core"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicktrav/air-gradient-rs"

# Small binary, predictable panics: optimise the firmware for size and keep
# overflow checks on even in release so sensor-math bugs surface on-device.
[profile.release]
opt-level = "s"
lto = "thin"
overflow-checks = true
codegen-units = 1
