[package]
name = "aq-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure, no_std core for the AirGradient firmware: decode, correction, formatting."

[dependencies]
# Fixed-capacity string/collections so the core stays alloc-free and usable on
# the MCU. The host tests exercise these same types.
heapless = "0.8"
# The ONLY hardware abstraction aq-core is allowed to depend on. Real sensor
# drivers will take `embedded_hal` traits as inputs so they stay host-testable.
embedded-hal = "1"

[dev-dependencies]
# Inline golden tests (`UPDATE_EXPECT=1 cargo test` to rewrite).
expect-test = "1"
# File-driven snapshot tests, one case per fixture file.
insta = { version = "1", features = ["glob"] }
# Fake I2C/SPI/UART buses to prove driver tests run on the host.
embedded-hal-mock = { version = "0.11", features = ["eh1"] }
