[package]
name = "aq-firmware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Thin esp-hal adapter that drives aq-core on the ESP32-C3."

[dependencies]
aq-core = { path = "../core" }
esp-backtrace = { version = "0.19.0", features = ["esp32c3", "panic-handler", "println"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32c3"] }
esp-hal = { version = "1.1.1", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.17.0", default-features = false, features = ["esp32c3", "jtag-serial"] }
