[package]
name = "aq-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared no_std esp-hal adapter: chip bring-up and the per-board run loop."

# Built only for the MCU target, as a dependency of the board binaries. It is not
# in the workspace default-members, so host `cargo test` never tries to compile
# esp-hal. The panic handler and app descriptor are deliberately NOT here: those
# must be linked by the final binary, so each board bin supplies them.
[dependencies]
aq-core = { workspace = true }
esp-hal = { workspace = true }
esp-println = { workspace = true }
